# fd-speech

./: .gitignore  LICENSE  MODEL_CARD.md  README.md  app.py  pyproject.toml
configs/: srfd_compact3.yaml
demo/: README.md
demo/model/: README.md  lora_config.json  selected_checkpoint.json  training_state.json
demo/site/: app.js  index.html  results.json  samples.json  styles.css
docs/: integration.md  method.md
experiments/: synthetic_validation.py
fdspeech/: __init__.py
scripts/: compute_reference_stats.py  paired_bootstrap.py  score_seed_tts_eval.py  score_speechmos_dnsmos.py  score_utmos_objective.py
space/: README.md
srfd/: __init__.py  conditions.py  extractors.py  frechet.py  loss.py  moments.py  stats_io.py
tests/: test_config_smoke.py  test_fdspeech_api.py  test_frechet.py  test_loss.py  test_moments.py
